<resources>
    <string name="app_name">JsoupDemo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="nav_subtitle_zing_mp3">Zing mp3</string>
    <string name="nav_subtitle_tools">Tools</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_lyric_on_screen">Lyric on screen</string>
    <string name="nav_voice_search">Voice search</string>
    <string name="nav_search">Search</string>
    <string name="nav_hot_music">Hot music</string>
    <string name="nav_rank">Rank</string>
    <string name="nav_albums">Albums</string>
    <string name="nav_artists">Artists</string>
    <string name="nav_top_10">Top 10</string>


    <!--Category album-->
    <string name="viet_nam">Vietnam</string>
    <string name="v_pop">V-pop</string>
    <string name="vn_romance">Romance</string>
    <string name="vn_rap_hiphop">Rap-HipHop</string>
    <string name="vn_trinh_cong_son">Trinh Cong Son</string>
    <string name="vn_chidrent">Childrent\'s</string>
    <string name="vn_rock">Rock</string>
    <string name="vn_dance">Dance</string>
    <string name="vn_country">Country</string>
    <string name="vn_red">Red music</string>

    <string name="us_uk">Us-Uk</string>
    <string name="us_pop">Pop</string>
    <string name="us_rok">Rock</string>
    <string name="us_rap_hiphop">Rap-HipHop</string>
    <string name="us_country">Country</string>
    <string name="us_edm">EDM</string>
    <string name="us_r_b">R/B soul</string>
    <string name="us_trance_house_techno">Trance/House/Techno</string>
    <string name="us_blue_jazz">Blue/Jazz</string>

    <string name="asia">Asia</string>
    <string name="k_pop">K-pop</string>
    <string name="jav">Jav</string>
    <string name="china">China</string>

    <!--String connection network-->
    <string name="connection_time_out">Connection Time Out</string>
    <string name="title_time_out_dialog_conn">Connection time out</string>
    <string name="msg_time_out_dialog_conn">Connection is time out, check your connection ?</string>

    <!--Category artist-->
    <string name="artist_vietnam">Vietnam</string>
    <string name="artist_us">U.S. UK</string>
    <string name="artist_korea">Korea</string>
    <string name="artist_jav">Japan</string>
    <string name="artist_china">China</string>
    <string name="artist_concert">Concert</string>

    <string name="artist_detail_fragment_title_song">Song</string>
    <string name="artist_detail_fragment_title_album">Album</string>
    <string name="artist_detail_fragment_title_story">Story</string>

    <string name="hot_music_pager_adapter_title_vietnam">Vietnam</string>
    <string name="hot_music_pager_adapter_title_usuk">U.S. UK</string>
    <string name="hot_music_pager_adapter_title_korean">Korea</string>
    <string name="hot_music_pager_adapter_title_rap_vietnam">Rap Viet</string>

    <string name="rank_pager_title_vietnam">Vietnam</string>
    <string name="rank_pager_title_usuk">U.S. UK</string>
    <string name="rank_pager_title_korean">Korea</string>

    <string name="rank_korean">Songs charts Korea</string>
    <string name="rank_us_uk">Songs charts U.S. UK</string>
    <string name="rank_vietnnam">Songs charts Vietnam</string>

    <string name="top100_adapter_title_vietnam">Vietnam</string>
    <string name="top100_adapter_title_us">U.S. UK</string>
    <string name="top100_adapter_title_korean">Korea</string>
    <string name="top100_adapter_title_concert">Concert</string>


    <string name="choose_song">Choose song</string>
    <string name="waiting">Watiing ...</string>
    <string name="play_all">Play all</string>
    <string name="playing_list">Playing list</string>
    <string name="search_artist">Search artist....</string>
</resources>
